# MeetingAI

./: .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  test_script.py
.agents/workflows/: fix-meetingai-env.md
.claude/: settings.local.json
meetingai/: app.py  cli.py  config.py  downloader.py  llm_processor.py  pipeline.py  prompts.py  transcriber.py
src/meetingai/: __init__.py  app.py  config.py  pipeline.py  transcriber.py
tests/: test_basic.py
