[project]
name = "meetingai"
version = "1.0.1"
description = "Local-first meeting transcription and summarization tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "yt-dlp>=2024.0",
    "click>=8.0",
    "gradio>=5.0",
    "pydantic-settings>=2.0",
    "google-genai>=1.0",
    "httpx>=0.27",
    "faster-whisper>=1.0.0",
    "mlx-whisper>=0.4 ; sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
meetingai = "meetingai.cli:main"
meetingai-ui = "meetingai.app:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetingai"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
